--- a/src/composer.json
+++ b/src/composer.json
@@ -28,7 +28,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/general.php"
+            "app/Helpers/general.php",
+            "app/Helpers/validate.php"
         ]
     },
     "autoload-dev": {
