--- a/data/nginx/config/default.conf
+++ b/data/nginx/config/default.conf
@@ -1,12 +1,12 @@
-upstream app_service {
-    server service_master:8000 weight=5;
-    server service_worker_1:8000;
-    server service_worker_2:8000 backup;
+upstream lyricfa_service {
+    server lyricfa_service_master:8000 weight=5;
+    server lyricfa_service_worker_1:8000;
+    server lyricfa_service_worker_2:8000 backup;
 }
 
 server {
     location / {
-        proxy_pass http://app_service;
+        proxy_pass http://lyricfa_service;
 
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
