--- a/DockerFile
+++ b/DockerFile
@@ -2,8 +2,14 @@ FROM php:8.2.3-fpm
 
 ARG user
 ARG uid
+ARG db_host
+ARG db_port
+ARG queue_connection
+ARG redis_host
+ARG redis_password
+ARG redis_port
 
-VOLUME app-service /var/www/app-service/
+VOLUME lyricfa-service /var/www/lyricfa-service/
 
 RUN apt-get update && apt-get install -y \
     git \
@@ -16,7 +22,7 @@ RUN apt-get update && apt-get install -y \
 
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd soap
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
@@ -24,15 +30,22 @@ RUN useradd -G www-data,root -u $uid -d /home/$user $user
 RUN mkdir -p /home/$user/.composer && \
     chown -R $user:$user /home/$user
 
-COPY ./src /var/www/app-service/
+COPY ./src /var/www/lyricfa-service/
 # COPY ./src/.env.example /var/www/app-service/.env
 
-RUN chmod 777 -R /var/www/app-service/storage/ && \
-    chown -R www-data:www-data /var/www/app-service
+RUN chmod 777 -R /var/www/lyricfa-service/storage/ && \
+    chown -R www-data:www-data /var/www/lyricfa-service
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
-WORKDIR /var/www/app-service
+WORKDIR /var/www/lyricfa-service
+
+ENV LYRIC_MAIN_DB_HOST=${db_host}
+ENV LYRIC_MAIN_DB_PORT=${db_port}
+ENV QUEUE_CONNECTION=${queue_connection}
+ENV REDIS_HOST=${redis_host}
+ENV REDIS_PASSWORD=${redis_password}
+ENV REDIS_PORT=${redis_port}
 
 RUN composer install --prefer-dist --no-interaction && \
     php artisan optimize:clear && \
