--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_DB_ROOT_PASSWORD}
       - MYSQL_PORT=${MYSQL_DB_PORT}
+      - MYSQL_ROOT_HOST='%'
     networks:
       lyricfa-network:
     volumes:
@@ -27,10 +28,10 @@ services:
         uid: ${MAIN_SERVICE_ID}
         db_host: ${MYSQL_DB_HOST}
         db_port: ${MYSQL_DB_PORT}
-        queue_connection: ${QUEUE_CONNECTION}
         redis_host: ${REDIS_HOST}
         redis_password: ${REDIS_PASSWORD}
         redis_port: ${REDIS_PORT}
+        cache_driver: ${CACHE_DRIVER}
       dockerfile: DockerFile
     depends_on:
       - mysql
@@ -66,7 +67,7 @@ services:
     image: nginx:latest
     container_name: lyricfa_nginx
     ports:
-      - "8000:80"
+      - "9000:80"
     depends_on:
       - lyricfa-master
     networks:
