--- a/DockerFile
+++ b/DockerFile
@@ -46,11 +46,11 @@ ENV COMPOSER_ALLOW_SUPERUSER=1
 
 WORKDIR /var/www/lyricfa-service
 
-ENV LYRIC_MAIN_DB_HOST=${db_host}
-ENV LYRIC_MAIN_DB_PORT=${db_port}
-ENV LYRIC_MAIN_DB_DATABASE=${db_database}
-ENV LYRIC_MAIN_DB_USERNAME=${db_username}
-ENV LYRIC_MAIN_DB_PASSWORD=${db_password}
+ENV LYRICFA_MAIN_DB_HOST=${db_host}
+ENV LYRICFA_MAIN_DB_PORT=${db_port}
+ENV LYRICFA_MAIN_DB_DATABASE=${db_database}
+ENV LYRICFA_MAIN_DB_USERNAME=${db_username}
+ENV LYRICFA_MAIN_DB_PASSWORD=${db_password}
 ENV REDIS_HOST=${redis_host}
 ENV REDIS_PASSWORD=${redis_password}
 ENV REDIS_PORT=${redis_port}
