--- a/src/.env.example
+++ b/src/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-LYRIC_MAIN_DB_CONNECTION=lyric
-LYRIC_MAIN_DB_HOST=127.0.0.1
-LYRIC_MAIN_DB_PORT=3306
-LYRIC_MAIN_DB_DATABASE=new-lyricfa
-LYRIC_MAIN_DB_USERNAME=root
-LYRIC_MAIN_DB_PASSWORD=H@S@n110
+LYRICFA_MAIN_DB_CONNECTION=lyric
+LYRICFA_MAIN_DB_HOST=127.0.0.1
+LYRICFA_MAIN_DB_PORT=3306
+LYRICFA_MAIN_DB_DATABASE=new-lyricfa
+LYRICFA_MAIN_DB_USERNAME=root
+LYRICFA_MAIN_DB_PASSWORD=H@S@n110
 
 FTP_HOST=5.9.3.36
 FTP_USERNAME=dllyricf
