--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,19 @@ services:
     container_name: lyricfa_mysql_db
     image: mysql:latest
     ports:
-      - "3305:${MYSQL_DB_PORT}"
+      - "${MYSQL_DB_PORT}:3306"
     environment:
       - MYSQL_DATABASE=${MYSQL_DB_DATABASE}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_DB_ROOT_PASSWORD}
       - MYSQL_PASSWORD=${MYSQL_DB_PASSWORD}
       - MYSQL_USER=${MYSQL_DB_USERNAME}
       - MYSQL_PORT=${MYSQL_DB_PORT}
     networks:
       lyricfa-network:
     volumes:
-      - ./data/db/mysql:/var/lib/mysql
-      - ./data/db/conf.d:/etc/mysql/conf.d
-      - ./data/db/logs:/logs:ro
+      - ./data/db/mysql/mysql:/var/lib/mysql
+      - ./data/db/mysql/conf.d:/etc/mysql/conf.d
+      - ./data/db/mysql/logs:/logs:ro
     restart: always
 
   lyricfa-master:
@@ -72,7 +72,8 @@ services:
     image: nginx:latest
     container_name: lyricfa_nginx
     ports:
-      - "9000:80"
+      - "80:80"
+      - "443:443"
     depends_on:
       - lyricfa-master
     networks:
