--- a/DockerFile
+++ b/DockerFile
@@ -58,7 +58,8 @@ ENV REDIS_PORT=${redis_port}
 RUN composer install --prefer-dist --no-interaction && \
     php artisan optimize:clear && \
     php artisan config:cache && \
-    php artisan route:cache
+    php artisan route:cache && \
+    php artisan key:generate
 
 ENV CACHE_DRIVER=${cache_driver}
 
