--- a/DockerFile
+++ b/DockerFile
@@ -4,9 +4,6 @@ ARG user
 ARG uid
 ARG db_host
 ARG db_port
-ARG db_database
-ARG db_username
-ARG db_password
 ARG queue_connection
 ARG redis_host
 ARG redis_password
@@ -48,9 +45,6 @@ WORKDIR /var/www/lyricfa-service
 
 ENV LYRICFA_MAIN_DB_HOST=${db_host}
 ENV LYRICFA_MAIN_DB_PORT=${db_port}
-ENV LYRICFA_MAIN_DB_DATABASE=${db_database}
-ENV LYRICFA_MAIN_DB_USERNAME=${db_username}
-ENV LYRICFA_MAIN_DB_PASSWORD=${db_password}
 ENV REDIS_HOST=${redis_host}
 ENV REDIS_PASSWORD=${redis_password}
 ENV REDIS_PORT=${redis_port}
@@ -58,8 +52,7 @@ ENV REDIS_PORT=${redis_port}
 RUN composer install --prefer-dist --no-interaction && \
     php artisan optimize:clear && \
     php artisan config:cache && \
-    php artisan route:cache && \
-    php artisan key:generate
+    php artisan route:cache
 
 ENV CACHE_DRIVER=${cache_driver}
 
